--- a/index.html
+++ b/index.html
@@ -217,11 +217,10 @@
 
             const addToCart = (id, labelEn, labelTa, rate) => {
                 if (!rate) return;
-                const label = lang === 'en' ? labelEn : labelTa;
                 setCart(curr => {
                     const exists = curr.find(i => i.id === id);
                     if (exists) return curr.map(i => i.id === id ? {...i, qty: i.qty + 1} : i);
-                    return [...curr, { id, label, rate, qty: 1 }];
+                    return [...curr, { id, labelEn, labelTa, rate, qty: 1 }];
                 });
             };
 
@@ -242,17 +241,22 @@
                 const { jsPDF } = window.jspdf;
                 const doc = new jsPDF();
 
-                // Header
+                // Header - Using English for standard font support in jsPDF
+                const headerTitle = "SRI VINAYAGA LABER WORKS";
+                const headerSubtitle = "SRI PACHAIAMMAN THUNAI";
+                const headerAddress = "Sinthan Nagar, Krishnampalayam, Erode - 03";
+                const headerContact = "Cell: 9095786363, 8015767107";
+
                 doc.setFontSize(10);
-                doc.text(T.subtitle, 105, 15, { align: 'center' });
+                doc.text(headerSubtitle, 105, 15, { align: 'center' });
                 doc.setFontSize(22);
                 doc.setFont('helvetica', 'bold');
-                doc.text(T.title, 105, 25, { align: 'center' });
+                doc.text(headerTitle, 105, 25, { align: 'center' });
                 
                 doc.setFontSize(10);
                 doc.setFont('helvetica', 'normal');
-                doc.text(T.address, 105, 32, { align: 'center' });
-                doc.text(T.contact, 105, 37, { align: 'center' });
+                doc.text(headerAddress, 105, 32, { align: 'center' });
+                doc.text(headerContact, 105, 37, { align: 'center' });
 
                 // Divider
                 doc.setLineWidth(0.5);
@@ -264,9 +268,10 @@
                 doc.text(`Date: ${new Date().toLocaleDateString()}`, 190, 52, { align: 'right' });
 
                 // Table
+                // Note: Standard jsPDF fonts don't support Tamil, so we use labelEn for the PDF names
                 const tableRows = cart.map((item, index) => [
                     index + 1,
-                    item.label,
+                    item.labelEn, 
                     item.qty,
                     item.rate.toFixed(2),
                     (item.rate * item.qty).toFixed(2)
@@ -278,6 +283,7 @@
                     body: tableRows,
                     theme: 'striped',
                     headStyles: { fillColor: [44, 62, 80] },
+                    styles: { fontSize: 10, cellPadding: 3 },
                     foot: [['', '', '', 'Total', `Rs. ${grandTotal.toFixed(2)}`]],
                     footStyles: { fillColor: [241, 196, 15], textColor: [44, 62, 80], fontStyle: 'bold' }
                 });
@@ -299,7 +305,10 @@
                         customerName, items: cart, total: grandTotal, createdAt: serverTimestamp(), userId: user?.uid
                     });
                     const header = lang === 'ta' ? '*ஸ்ரீ விநாயகா லேபர் ஒர்க்ஸ்*' : '*SRI VINAYAGA LABER WORKS*';
-                    const msg = `${header}\n*Customer:* ${customerName}\n*Total:* ₹${grandTotal.toFixed(2)}\n\n*Items:*\n${cart.map(i => `- ${i.label} (x${i.qty}): ₹${(i.rate*i.qty).toFixed(2)}`).join('\n')}`;
+                    const msg = `${header}\n*Customer:* ${customerName}\n*Total:* ₹${grandTotal.toFixed(2)}\n\n*Items:*\n${cart.map(i => {
+                        const name = lang === 'en' ? i.labelEn : i.labelTa;
+                        return `- ${name} (x${i.qty}): ₹${(i.rate*i.qty).toFixed(2)}`;
+                    }).join('\n')}`;
                     window.open(`https://wa.me/918643861100?text=${encodeURIComponent(msg)}`);
                     setCart([]); setCustomerName(''); setShowCart(false);
                 } catch (e) { alert("Error: " + e.message); }
@@ -424,7 +433,7 @@
                                                 <div className="space-y-1 bg-slate-50 p-3 rounded-2xl border border-slate-100">
                                                     {o.items?.map((i,idx) => (
                                                         <div key={idx} className="flex justify-between text-[10px] font-bold text-slate-500">
-                                                            <span className="truncate pr-4">{i.qty} x {i.label}</span>
+                                                            <span className="truncate pr-4">{i.qty} x {lang === 'en' ? i.labelEn : i.labelTa}</span>
                                                             <span className="shrink-0">₹{(i.rate * i.qty).toFixed(2)}</span>
                                                         </div>
                                                     ))}
@@ -479,7 +488,7 @@
                                     {cart.map(item => (
                                         <div key={item.id} className="flex justify-between items-center bg-slate-50 p-4 rounded-2xl border border-slate-100">
                                             <div className="flex-1 min-w-0 pr-4">
-                                                <p className="font-black text-[11px] truncate uppercase leading-tight">{item.label}</p>
+                                                <p className="font-black text-[11px] truncate uppercase leading-tight">{lang === 'en' ? item.labelEn : item.labelTa}</p>
                                                 <p className="text-[10px] font-bold text-slate-400 mt-1">₹{item.rate.toFixed(2)} / pc</p>
                                             </div>
                                             <div className="flex items-center gap-4 bg-white p-1 rounded-xl shadow-sm border border-slate-100">
